# devpilot-cli

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml
.github/workflows/: release.yml  test-publish.yml  tests.yml
src/devpilot/: __init__.py  __main__.py  cli.py
src/devpilot/commands/: __init__.py  core.py  dev.py  file.py  system.py  theme.py  web.py
src/devpilot/core/: __init__.py  console.py  errors.py  formatting.py  state.py  theme.py
src/devpilot/models/: __init__.py  config.py  file.py  system.py  web.py
src/devpilot/services/: __init__.py  animation.py  config.py  doctor.py  encoding.py  file.py  generators.py  json_tools.py  system.py  web.py  web_client.py
tests/: test_cli.py  test_dev_cli.py  test_error_handling.py  test_file_cli.py  test_system_cli.py  test_theme_cli.py  test_web_cli.py
tests/services/: test_animation.py  test_config.py  test_doctor.py  test_encoding.py  test_file.py  test_generators.py  test_json_tools.py  test_system.py  test_web.py  test_web_client.py
