[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "devpilot-cli"
version = "0.1.0"
description = "A modular developer toolkit for the terminal."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.27,<1.0",
    "rich>=13.8,<16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "ruff>=0.12,<1.0",
]

[project.scripts]
devpilot = "devpilot.cli:app"


[tool.hatch.build.targets.wheel]
packages = ["src/devpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
