[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "devpilot-cli"
version = "0.1.0"
description = "A modular developer toolkit for the terminal."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["cli", "developer-tools", "terminal", "typer", "rich"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "beautifulsoup4>=4.15,<5.0",
    "httpx>=0.28,<1.0",
    "platformdirs>=4.10,<5.0",
    "psutil>=7.2,<8.0",
    "pydantic>=2.13,<3.0",
    "typer>=0.27,<1.0",
    "rich>=13.8,<16.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.5,<2.0",
    "pytest>=8.0,<10.0",
    "pytest-cov>=7.1,<8.0",
    "ruff>=0.12,<1.0",
    "twine>=6.2,<7.0",
]

[project.scripts]
devpilot = "devpilot.cli:run"

[project.urls]
Homepage = "https://github.com/yunopo42/devpilot-cli"
Repository = "https://github.com/yunopo42/devpilot-cli.git"
Issues = "https://github.com/yunopo42/devpilot-cli/issues"
Changelog = "https://github.com/yunopo42/devpilot-cli/blob/main/CHANGELOG.md"


[tool.hatch.build.targets.wheel]
packages = ["src/devpilot"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/README.md",
    "/SECURITY.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["devpilot"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
